--- a/app/src/main/res/layout/activity_tear.xml
+++ b/app/src/main/res/layout/activity_tear.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/tear_background">
+    android:background="@drawable/background">
 
     <RelativeLayout
         android:id="@+id/rl_tear_container"
