--- a/app/src/main/res/values-w820dp/games-ids.xml
+++ b/app/src/main/res/values-w820dp/games-ids.xml
@@ -8,4 +8,6 @@
     <string name="achievement_platinum">CgkI56rslNQCEAIQBA</string>
     <string name="achievement_diamond">CgkI56rslNQCEAIQBQ</string>
     <string name="achievement_challenger">CgkI56rslNQCEAIQBg</string>
+    <string name="achievement_ekko">CgkI56rslNQCEAIQBw</string>
+    <string name="achievement_teemo">CgkI56rslNQCEAIQCA</string>
 </resources>
