--- a/app/src/main/res/layout/activity_stage0.xml
+++ b/app/src/main/res/layout/activity_stage0.xml
@@ -12,7 +12,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="이 앱은 리그오브레전드 실력을 '정확'하게 측정하기위해 제작되었습니다.\n\n랭크게임에서 팀원의 트롤때문에 정확하게 측정하지 못한 당신의 진짜 티어를 측정해줍니다.\n\n특정 챔피언에 치우치지 않은 포괄적인 문제로 구성되어 있습니다.\n\n재미있게 즐겨주세요!\n\n(문제의 배점은 제작자의 주관이 포함되어있습니다.) "
+            android:text="리그오브레전드의 트롤때문에 정확하게 측정하지 못한 당신의 진짜 티어를 측정해줍니다.\n\n평소 행동하는 방식대로 지문을 선택해주세요! \n\n특정 챔피언에 치우치지 않은 포괄적인 문제로 구성하도록 노력했습니다.\n\n재미있게 즐겨주세요!\n\n(문제의 배점은 제작자의 주관이 포함되어있습니다.) "
             android:textSize="@dimen/question_text_size"/>
 
         <TextView
