--- a/app/src/main/res/layout/activity_stage10.xml
+++ b/app/src/main/res/layout/activity_stage10.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/title_top_margin"
         android:layout_marginLeft="@dimen/title_left_margin"
-        android:text="문제 10. 현재 궁극기 상황을 항상 체크하고 있나요?"
+        android:text="문제 10. 당신은 평소 어떻게 아이템을 구매하시나요?"
         android:textSize="@dimen/question_text_size"/>
 
     <LinearLayout
@@ -26,14 +26,14 @@
             android:id="@+id/tv_one"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1. 난 나밖에 안보인다. 궁극기로 나 혼자 다 잡을수 있을거같다."
+            android:text="1. 저는 수많은 연구를 통한 장인정신으로 저만의 아이템 트리가 있어요."
             android:textSize="@dimen/question_text_size"/>
 
         <TextView
             android:id="@+id/tv_two"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2. 팀원의 궁극기 상황을 체크하고 타이밍에 맞게 사용한다."
+            android:text="2. 저는 도란 성애자에요. 최고의 가성비 도란과 함께라면 라인을 박살낼 수 있어요."
             android:layout_marginTop="@dimen/question_top_margin"
             android:textSize="@dimen/question_text_size"/>
 
@@ -41,7 +41,7 @@
             android:id="@+id/tv_three"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="3. 상대방 궁에 죽으면 쟤 궁 빠졌어! 라고 신나게 알려준다."
+            android:text="3. 저는 무조건 인벤 챔피언 공략글을 보고 그대로 따라사요. 그분들의 정성과 연구력은 정말 대단해요."
             android:layout_marginTop="@dimen/question_top_margin"
             android:textSize="@dimen/question_text_size"/>
 
@@ -49,7 +49,7 @@
             android:id="@+id/tv_four"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="4. 난 현재 팀의 궁극기 상황과 적의 궁극기 보유 여부를 대략적으로 알고 각을 볼 줄 안다."
+            android:text="4. 저는 챔피언에 알맞는 아이템을 모두 알고 상황에 따라 최적화된 아이템을 구매할 줄 아는 안목이 있어요."
             android:layout_marginTop="@dimen/question_top_margin"
             android:textSize="@dimen/question_text_size"/>
 
@@ -62,6 +62,8 @@
         android:layout_margin="@dimen/activity_vertical_margin"
         android:background="@drawable/ic_keyboard_arrow_left_white_36dp"
         android:layout_alignParentBottom="true"/>
+
+
 
     <TextView
         android:layout_width="wrap_content"
